# rl-unicycle

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  e --abort  main.py  main_threaded.py  main_versioned.py  pyproject.toml  requirements.txt  robot_system.py  setup.py  temp_config.txt
.github/workflows/: PR_linting.yml  dotnetcore_PR.yml
communication/: mqtt.py
configs/: config_main.ini
controller/: __init__.py  controllerABC.py  controllers.py  pidcontroller.py  rlcontroller.py  rwip_model_m22.onnx  rwip_model_rewfn1_nodr_bestrwip.onnx  rwip_model_rewfn4_dr_194136.onnx  rwip_model_rewfn4_dr_bestmodel.onnx  rwip_model_rewfn4_nodr_bestrwip.onnx  testcontroller.py
controller/rlmodels/: 2_v_pen.onnx  rwip_model_rewfn2_nodr_bestrwip.onnx  rwip_model_rewfn4_nodr_190422.onnx  rwip_w_stalltorque_dr_bestmodel.onnx
fusion/: AHRSfusion.py
icm20948/: imu_test_functions.py
icm20948/config/: imu1.ini
icm20948/lib/: imu_lib.py
log/: logging.ini  logging_config.py
moteus-scripts/: README.md  main.py
moteus-scripts/logs/: 2024-02-09 12:16:10.txt  2024-02-09 12:18:55.txt  2024-02-09 12:27:18.txt  (+3 more)
motors/: MN6007.py  fault_codes.json
robot/: RWIP.py  robot_system.py
scripts/: RWIP-deriv.ipynb  RWIP-deriv.py  broomy-mlp-jan20th.onnx  broomy-rnn-jan31th.onnx  data-collection.py  final_request_times.csv  imu-alone.py  influx-notebook.ipynb  influx.data.csv  lqr_colibration.ipynb  main.py  multi_test.py  ping.py  stop.py  test_model_import.ipynb  testing-dataclass-telem.py  torque.py  transport_final_request_times.csv  transport_test.py  two_motors.py
spitest_in_c/: spidev_test
src/: main.py  main_threaded.py  stop.py
test_fdcanusb/: config.txt
test_loop_cpp/: ControlLoopPREEMPT.cpp  ControlLoopPreempt  ControlLoopPython  ControlLoopPython.cpp  ControlLoopTest  CppControlLoopTest.cpp  Makefile
test_moteus-scripts/: ping.py  plot.ipynb  stop.py  torque.py
test_scripts/: GPIO_simple_output.py  LoopTimer.py  i2c_imu_test_loop.py
venv_rluni/: pyvenv.cfg
xbox_controller/: client.py
(+149 files in other folders)
